languages/montiarc-fe/src/test/resources/contextconditions/invalid/ComplexInvalidParametersOrder.arc
package invalid;


component ComplexInvalidParametersOrder(int a, int x = 5, String y = "i am a default value", int thisShouldBeADefaultParameterButItIsNot) {

}